# rrss-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  run.sh  test.db
mcp/: __init__.py  __main__.py  analyzer.py  api.py  client.py  mcp_core.py  models.py  reporter.py  scheduler.py  twitter_client.py
mcp/templates/: config.html  daily_report.html  dashboard.html
reports/: report_20241213.html
